# Fluid-flow

./: README.md  ReadMe.txt
lbm/: .gitignore  CMakeLists.txt
lbm/Debug/: .gitignore
lbm/lbm/: .gitignore  array_func_impl.h  bc.cpp  bc.h  distribution_func.h  distribution_func_impl.h  fluid.cpp  fluid.h  macroscopic_param.h  macroscopic_param_impl.h  main.cpp  medium.cpp  medium.h  my_matrix.h  my_matrix_impl.h  solver.h  srt.cpp  srt.h
lbm/lbm/Debug/: .gitignore  medium.nativecodeanalysis.xml  srt.obj.enc  vc.nativecodeanalysis.all.xml
lbm/lbm/Debug/lbm.tlog/: .gitignore
lbm/src/: CMakeLists.txt  main (Конфликтующая копия с компьютера UX32LN 2017-04-30).cpp  main.cpp
lbm/src/math/: array_func_impl.h  my_matrix.h  my_matrix_2d.h  my_matrix_2d_impl.h  my_matrix_3d.h  my_matrix_3d_impl.h  my_matrix_impl.h  my_matrix_interface.h
lbm/src/math/2d/: my_matrix_2d.h  my_matrix_2d_impl.h
lbm/src/math/3d/: my_matrix_3d.h  my_matrix_3d_impl.h
lbm/src/modeling_area/: fluid.cpp  fluid.h  medium.cpp  medium.h
lbm/src/phys_values/: distribution_func.h  distribution_func_impl.h  distribution_function_interface.h  macroscopic_param.h  macroscopic_param_impl.h
lbm/src/phys_values/2d/: distribution_func_2d.h  distribution_func_2d_impl.h  macroscopic_param_2d.h  macroscopic_param_2d_impl.h
lbm/src/phys_values/3d/: distribution_func_3d.h  distribution_func_3d_impl.h  macroscopic_param_3d.h  macroscopic_param_3d_impl.h
lbm/src/solver/: ib_srt.cpp  ib_srt.h  mrt.cpp  mrt.h  solver.h  srt.cpp  srt.h
lbm/src/solver/bc/: bc.cpp  bc.h  bc_new.h
lbm/src/solver/im_body/: immersed_body.cpp  immersed_body.h
visualisation/: contour_plot.py  heatmap_plot.py  im_body_plot.py  plot_spectrum.py  profile_plot.py  streamlines_plot.py  streamlines_plot_modified.py
